[tool.poetry]
name = "datastructures"
version = "0.1.0"
description = "Python datastructure implementations"
authors = ["Adithya Balaji <adithyabsk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
coverage = "^6.3.2"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
# use --no-cov in PyCharm to override pytest-cov and enable builtin coverage
addopts = "-v -x --cov=datastructures --cov-report=term --cov-report=html"

[tool.coverage.run]
branch = true
omit = [
    "tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
